--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - name: Home
   link: /
-- name: About
-  link: /about.html
-- name: Blog
-  link: /blog.html
+- name: News
+  link: /news.html
 - name: Members
   link: /members.html
+- name: Publications
+  link: /publications.html
